@@ -35,7 +35,7 @@ FRAME_SPACING = 12
 TITLE_BAR_HEIGHT = 28
 SUBFACTORY_SUBHEADER_HEIGHT = 36
 SUBFACTORY_LIST_ELEMENT_HEIGHT = 28
-SUBFACTORY_INFO_HEIGHT = 175
+SUBFACTORY_INFO_HEIGHT = 138
 
 SUBFACTORY_LIST_WIDTH = 300
 ITEM_BOX_BUTTON_SIZE = 40
