@@ -269,7 +269,7 @@ subfactory_invalid=\n[font=default-bold]Invalid[/font] - needs to be repaired
 # Subfactory info
 subfactory_info=Subfactory Info
 no_subfactory=no subfactory selected
-subfactory_needs_repair=This subfactory has become invalid because the set of active mods has changed. You can resolve this by either repairing it, or by re-activating the missing mods. Repairing removes everything that has become invalid.
+subfactory_needs_repair=The active mods have changed, breaking this subfactory. Load the previous modset, or repair to remove any invalid parts.
 repair_subfactory=Repair subfactory
 timescale=Timescale
 timescale_tt=The timescale sets how quickly items are produced. For example, selecting [font=default-bold]1m[/font] and adding a product of 400 green circuits means you want to produce 400 circuits [font=default-bold]per minute[/font].
